cluster/apps/homelab/whatsappbot-golang/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: whatsappbot-golang
  namespace: whatsappbot-golang
  labels:
    app: whatsappbot-golang
spec:
  type: ClusterIP
  selector:
    app: whatsappbot-golang
  ports:
    - name: public
      port: 46565
      targetPort: public
      protocol: TCP
    - name: internal
      port: 9000
      targetPort: internal
      protocol: TCP
