cluster/apps/homelab/whatsappbot-golang/httproute-internal.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: whatsappbot-golang-internal
  namespace: whatsappbot-golang
spec:
  parentRefs:
    - name: homelab-gateway-internal
      namespace: gateway
      sectionName: https
  hostnames:
    - "whatsappbot.martinez-saweczko.es"
  rules:
    - backendRefs:
        - name: whatsappbot-golang
          port: 9000
