cluster/apps/homelab/whatsappbot-golang/httproute-public.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: whatsappbot-golang-public
  namespace: whatsappbot-golang
spec:
  parentRefs:
    - name: homelab-gateway-public
      namespace: gateway
      sectionName: https
  hostnames:
    - "kiosk.martinez-saweczko.es"
  rules:
    - backendRefs:
        - name: whatsappbot-golang
          port: 46565
